Add chat_sessions and chroma_persistent_storage directories for data persistence

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,19 @@
 # Environment variables
 .env
+.env.*
+*.env
+env_*.txt
+env_working.txt
 
 # Google Service Account credentials
 credentials.json
+*credentials*
+*credential*
+
+# MongoDB connection strings and sensitive data
+*mongodb*
+*connection*
+*uri*
 
 # Python
 __pycache__/
@@ -28,6 +39,7 @@ wheels/
 
 # Virtual environment
 venv/
+env/
 ENV/
 
 # IDE
@@ -43,8 +55,13 @@ Thumbs.db
 # Logs
 *.log
 
-# Chat sessions (optional - remove if you want to track them)
-chat_sessions/
+# Chat sessions - NOW TRACKING (commented out for tracking)
+# chat_sessions/
 
-# ChromaDB storage
-chroma_persistent_storage/
+# ChromaDB storage - NOW TRACKING (commented out for tracking)
+# chroma_persistent_storage/
+
+# Temporary files
+*.tmp
+*.temp
+*~
